# rag-journal

./: .env.example  .gitignore  INSTALLATION.md  Makefile  PRODUCTION-RACCOMANDATIONS.md  PROJECT-STRUCTURE.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  requirements2.txt  setup_project.sh
config/: config.yaml
docs/AI/: claude.answer.1.txt
scripts/: create_metadata_from_csv.py  debug_check_url.py  debug_list_authors.py  download_articles.py  ingest_articles.py  query.py  setup_database.py  test_queries.py
src/rag_journal/: __init__.py
src/rag_journal/database/: mongodb_client.py
src/rag_journal/embeddings/: __init__.py  embedder.py
src/rag_journal/llm/: __init__.py  llm_client.py
src/rag_journal/models/: __init__.py  article.py
src/rag_journal/rag/: __init__.py  agentic_rag.py
src/rag_journal/utils/: config.py  logger.py  misc-UNUSED.py  yaml.py
tmp/: constraints.txt  requirements-V1.txt  requirements.txt  requirements_cpu.txt  requirements_no_transformers.txt
tmp/ORIG/: articlesIngestor.py
tmp/ORIG/scripts/: db.py
tmp/ORIG/src/: main.py
tmp/scripts/: OLD_query.py  ingest_articles-V1.py  ingest_articles-V2.py  query-V1.py
tmp/src/rag_journal/llm/: query_classifier-V1-NO-QUANTIZATION.py
tmp/src/rag_journal/rag/: agentic_rag-V1.py
