[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-journal"
version = "0.1.0"
description = "Italian Journal RAG System"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "pymongo>=4.6.1,<5.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "torch>=2.1.0,<2.3.0",
    #"transformers>=4.36.0,<4.39.0",
    "transformers>=4.44.2,<5.0.0", # PrivateGPT compatible
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "tqdm>=4.66.0",
    "click>=8.1.0",
    "colorama>=0.4.0",
    "accelerate>=0.25.0",
    "optimum>=1.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/marcolino/rag-journal"
Repository = "https://github.com/marcolino/rag-journal.git"

[tool.setuptools]
packages = ["rag_journal"]
#packages = ["src"]

[tool.setuptools.package-dir]
rag_journal = "src/rag_journal"
#src = "src"  # Optional - this is the default

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
